--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class = "page">
     <div class="eisen-matrix">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-list">
       <p id="add-task">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="new-task-label">Add Item</label>
         <div class="task-row">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="text-input task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
-          <input type="checkbox">
+          <input type="checkbox" class = "checkbox-input">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input type="text" class="text-input task">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox">
+          <input type="checkbox" class = "checkbox-input">
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <input type="text" value="Go Shopping" class="text-input task">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
@@ -42,9 +42,9 @@
       <h3>Completed</h3>
       <ul id="completed-tasks">
         <li>
-          <input type="checkbox" checked>
+          <input type="checkbox" class = "checkbox-input" checked>
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <input type="text" class="text-input task">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
