--- a/index.html
+++ b/index.html
@@ -7,47 +7,47 @@
   </head>
   <body class = "page">
     <div class="eisen-matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img class = "eisen-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-list">
       <p id="add-task">
-        <label for="new-task" class="new-task-label">Add Item</label>
+        <label for="new-task" class="label new-task-label">Add Item</label>
         <div class="task-row">
-          <input id="new-task" class="text-input task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="input text-input task" type="text">
+          <button class = "button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox" class = "checkbox-input">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="text-input task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class = "list-section-name">Todo</h3>
+      <ul id="incomplete-tasks" class = "tasks-list">
+        <li class = "task-item">
+          <input type="checkbox" class = "input checkbox-input">
+          <label class="label task">Pay Bills</label>
+          <input type="text" class="input text-input task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class ="delete-icon" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox" class = "checkbox-input">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="text-input task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="edit-mode task-item">
+          <input type="checkbox" class = "input checkbox-input">
+          <label class="label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input text-input task">
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img class ="delete-icon" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" class = "checkbox-input" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="text-input task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class = "list-section-name">Completed</h3>
+      <ul id="completed-tasks" class = "tasks-list">
+        <li class = "task-item">
+          <input type="checkbox" class = "input checkbox-input" checked>
+          <label class="label task">See the Doctor</label>
+          <input type="text" class="input text-input task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class ="delete-icon" src="./remove.svg">
           </button>
         </li>
       </ul>
