--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class = "page">
     <div class="eisen-matrix">
-      <img class = "eisen-image" src="./eisenhower-matrix.jpg">
+      <img class = "eisen-image" src="./eisenhower-matrix.jpg" alt = "Eisenhower Matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-list">
@@ -26,7 +26,7 @@
           <input type="text" class="input text-input task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class ="delete-icon" src="./remove.svg">
+            <img class ="delete-icon" src="./remove.svg" alt = "Delete button icon">
           </button>
         </li>
         <li class="edit-mode task-item">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="input text-input task">
           <button class="button edit">Save</button>
           <button class="button delete">
-            <img class ="delete-icon" src="./remove.svg">
+            <img class ="delete-icon" src="./remove.svg" alt = "Delete button icon">
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input type="text" class="input text-input task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class ="delete-icon" src="./remove.svg">
+            <img class ="delete-icon" src="./remove.svg" alt = "Delete button icon">
           </button>
         </li>
       </ul>
